# Maria

./: CMakeLists.txt  README.md
example/: project.yaml
example/animations/: knight_idle.ani  knight_walk.animation
example/meshes/: box.mesh  knight.mesh  knight.skeleton  room.mesh
example/scenes/: scene1.yaml
example/scripts/: knight.lua
example/shaders/: default_mesh.fsh  default_mesh.vsh  skinned_mesh.fsh  skinned_mesh.vsh
example/textures/: knight.txr  room.texture
game/: main.cpp
libmaria/: libmaria.h
libmaria/core/: application.h  collider.h  components.h  scene.h  script.h  window.h
libmaria/renderer/: animation.h  camera.h  mesh.h  shader.h  skeleton.h  skinned_mesh.h  texture.h  transform.h
libmaria/util/: assets.h
test/: box.fbx
test/box/textures/: box0.texture
tools/fbx_tool/: animation.h  main.cpp  mesh.h  skeleton.h  texture.h
tools/png_tool/: main.cpp
