cmake_minimum_required (VERSION 3.0.0)
set(CMAKE_CXX_STANDARD 17)

add_subdirectory(extern/assimp)
add_subdirectory(extern/entneko)
add_subdirectory(extern/glad)
set(GLFW_BUILD_EXAMPLES OFF)
set(GLFW_BUILD_TESTS OFF)
set(GLFW_BUILD_DOCS OFF)
set(BUILD_SHARED_LIBS OFF)
add_subdirectory(extern/glfw)
add_subdirectory(extern/glm)
add_subdirectory(extern/lua)
add_subdirectory(extern/stb)
add_subdirectory(extern/yaml-cpp)

project (libmaria)
file (GLOB_RECURSE libmaria_src libmaria/**.*)
add_library (libmaria STATIC ${libmaria_src})
target_link_libraries (libmaria PUBLIC entneko glad glfw glm lua stb yaml-cpp)
target_include_directories (libmaria PUBLIC libmaria)

project (game)
file (GLOB_RECURSE game_src game/**.*)
add_executable (game ${game_src})
target_link_libraries (game PUBLIC libmaria)

project (fbx_tool)
file (GLOB_RECURSE fbx_tool_src tools/fbx_tool/**.*)
add_executable (fbx_tool ${fbx_tool_src})
target_link_libraries (fbx_tool PUBLIC assimp glm stb)